--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -17,3 +17,28 @@
   color: #000;
   border: 1px solid var(--primary);
 }
+
+.btn--outline {
+  background-color: transparent;
+  color: #fff;
+  padding: 8px 20px;
+  border-radius: 2px solid var(--primary);
+  transition: all 0.2s ease-in-out;
+}
+
+.btn--medium {
+  padding: 8px 20px;
+  font-size: 1.2rem;
+  font-weight: bold;;
+}
+
+.btn--large {
+  padding: 12px 26px;
+  font-size: 1.5rem;
+}
+
+.btn--medium:hover, .btn--large:hover {
+  background-color: #fff;
+  color: #000;
+  transition: all 0.2s ease-in-out;
+}
